stripe publishable key issue

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_STRIPR_KEY = pk_test_aY2kDyOgoSUtb9g8q1ZyVxoR00SxG9OqLS
+REACT_APP_STRIPE_KEY = pk_test_aY2kDyOgoSUtb9g8q1ZyVxoR00SxG9OqLS
